# Voxel_Terrain_Renderer

./: CMakeLists.txt  README.md
flow_charts/: graphis_pipeline.drawio  linking_attributes.drawio
glad/: glad.c
headers/glad/: glad.h
headers/includes/: Camera.hpp  Shader.hpp  Texture.hpp
include/: Shader.hpp  stb_image.h
include/glad/: glad.h
shaders/: boxshader.frag  boxshader.vert  default.frag  default.vert  second.frag  shader.fs  shader.vs
src/: Camera.cpp  Shader.cpp  Texture.cpp  glad.c  main.cpp
